// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxCell component CheckboxCell renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table>
        <tbody>
          <tr>
            <td
              class="table--cell--checkbox"
            >
              <div
                class="gds-field-group"
              >
                <div
                  class="field gds-checkbox-container field input-checkbox-field gds-typography"
                >
                  <label
                    class="input-checkbox-field-read-only input-checkbox-field-checked"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square-check"
                      />
                    </div>
                    Label 1
                  </label>
                  <label
                    class="input-checkbox-field-read-only"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square"
                      />
                    </div>
                    Label 2
                  </label>
                  <label
                    class="input-checkbox-field-read-only"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square"
                      />
                    </div>
                    Label 3
                  </label>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table>
      <tbody>
        <tr>
          <td
            class="table--cell--checkbox"
          >
            <div
              class="gds-field-group"
            >
              <div
                class="field gds-checkbox-container field input-checkbox-field gds-typography"
              >
                <label
                  class="input-checkbox-field-read-only input-checkbox-field-checked"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square-check"
                    />
                  </div>
                  Label 1
                </label>
                <label
                  class="input-checkbox-field-read-only"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square"
                    />
                  </div>
                  Label 2
                </label>
                <label
                  class="input-checkbox-field-read-only"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square"
                    />
                  </div>
                  Label 3
                </label>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCell component CheckboxCell renders in edit mode and handles change 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table>
        <tbody>
          <tr>
            <td
              class="table--cell--checkbox"
            >
              <div
                class="gds-field-group"
              >
                <div
                  class="field gds-checkbox-container field input-checkbox-field gds-typography"
                >
                  <label
                    class="input-checkbox-field-checked"
                    data-testid="DATA-TEST-ID-0"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square-check"
                      />
                    </div>
                    Label 1
                  </label>
                  <label
                    class=""
                    data-testid="DATA-TEST-ID-1"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fal,square"
                      />
                    </div>
                    Label 2
                  </label>
                  <label
                    class=""
                    data-testid="DATA-TEST-ID-2"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fal,square"
                      />
                    </div>
                    Label 3
                  </label>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table>
      <tbody>
        <tr>
          <td
            class="table--cell--checkbox"
          >
            <div
              class="gds-field-group"
            >
              <div
                class="field gds-checkbox-container field input-checkbox-field gds-typography"
              >
                <label
                  class="input-checkbox-field-checked"
                  data-testid="DATA-TEST-ID-0"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square-check"
                    />
                  </div>
                  Label 1
                </label>
                <label
                  class=""
                  data-testid="DATA-TEST-ID-1"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fal,square"
                    />
                  </div>
                  Label 2
                </label>
                <label
                  class=""
                  data-testid="DATA-TEST-ID-2"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fal,square"
                    />
                  </div>
                  Label 3
                </label>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCell component CheckboxCell renders in edit mode via extra 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table>
        <tbody>
          <tr>
            <td
              class="table--cell--checkbox"
            >
              <div
                class="gds-field-group"
              >
                <div
                  class="field gds-checkbox-container field input-checkbox-field gds-typography"
                >
                  <label
                    class="input-checkbox-field-checked"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square-check"
                      />
                    </div>
                    Label 1
                  </label>
                  <label
                    class=""
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fal,square"
                      />
                    </div>
                    Label 2
                  </label>
                  <label
                    class=""
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fal,square"
                      />
                    </div>
                    Label 3
                  </label>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table>
      <tbody>
        <tr>
          <td
            class="table--cell--checkbox"
          >
            <div
              class="gds-field-group"
            >
              <div
                class="field gds-checkbox-container field input-checkbox-field gds-typography"
              >
                <label
                  class="input-checkbox-field-checked"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square-check"
                    />
                  </div>
                  Label 1
                </label>
                <label
                  class=""
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fal,square"
                    />
                  </div>
                  Label 2
                </label>
                <label
                  class=""
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fal,square"
                    />
                  </div>
                  Label 3
                </label>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCell component CheckboxCell renders when hidden 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table>
        <tbody>
          <tr>
            <td
              class="table--cell--checkbox"
              style="display: none;"
            >
              <div
                class="gds-field-group"
              >
                <div
                  class="field gds-checkbox-container field input-checkbox-field gds-typography"
                >
                  <label
                    class="input-checkbox-field-read-only input-checkbox-field-checked"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square-check"
                      />
                    </div>
                    Label 1
                  </label>
                  <label
                    class="input-checkbox-field-read-only"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square"
                      />
                    </div>
                    Label 2
                  </label>
                  <label
                    class="input-checkbox-field-read-only"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square"
                      />
                    </div>
                    Label 3
                  </label>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table>
      <tbody>
        <tr>
          <td
            class="table--cell--checkbox"
            style="display: none;"
          >
            <div
              class="gds-field-group"
            >
              <div
                class="field gds-checkbox-container field input-checkbox-field gds-typography"
              >
                <label
                  class="input-checkbox-field-read-only input-checkbox-field-checked"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square-check"
                    />
                  </div>
                  Label 1
                </label>
                <label
                  class="input-checkbox-field-read-only"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square"
                    />
                  </div>
                  Label 2
                </label>
                <label
                  class="input-checkbox-field-read-only"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square"
                    />
                  </div>
                  Label 3
                </label>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxCell component CheckboxCell renders with forced value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table>
        <tbody>
          <tr>
            <td
              class="table--cell--checkbox"
            >
              <div
                class="gds-field-group"
              >
                <div
                  class="field gds-checkbox-container field input-checkbox-field gds-typography"
                >
                  <label
                    class="input-checkbox-field-read-only input-checkbox-field-checked"
                  >
                    <div
                      class="checkbox-marker"
                    >
                      <i
                        class="icon"
                        icon="fas,square-check"
                      />
                    </div>
                    Label 4
                  </label>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table>
      <tbody>
        <tr>
          <td
            class="table--cell--checkbox"
          >
            <div
              class="gds-field-group"
            >
              <div
                class="field gds-checkbox-container field input-checkbox-field gds-typography"
              >
                <label
                  class="input-checkbox-field-read-only input-checkbox-field-checked"
                >
                  <div
                    class="checkbox-marker"
                  >
                    <i
                      class="icon"
                      icon="fas,square-check"
                    />
                  </div>
                  Label 4
                </label>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
